--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -27,6 +27,7 @@
     "@backstage/plugin-auth-node": "^0.4.11",
     "@backstage/plugin-catalog-backend": "^1.21.0",
     "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.1.14",
+    "@backstage/plugin-kubernetes-backend": "^0.16.4",
     "@backstage/plugin-permission-backend": "^0.5.40",
     "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.1.13",
     "@backstage/plugin-permission-common": "^0.7.13",
@@ -38,6 +39,7 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.1.21",
     "@backstage/plugin-search-backend-node": "^1.2.20",
     "@backstage/plugin-techdocs-backend": "^1.10.3",
+    "@internal/linkerd-backend": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
     "dockerode": "^3.3.1",
