--- a/plugins/linkerd-backend/sample/emojivoto.yaml
+++ b/plugins/linkerd-backend/sample/emojivoto.yaml
@@ -1,57 +1,228 @@
-# This file contains some sample data to model the services which are deployed with the emojivoto demo
-# from linkerd into the Backstage Software Catalog.
-apiVersion: backstage.io/v1alpha1
-kind: Component
+apiVersion: v1
+kind: Namespace
 metadata:
-  name: web
-  description: The web frontend from the emoji service
-  namespace: default
-  annotations:
-    backstage.io/kubernetes-label-selector: app=web-svc
-    backstage.io/kubernetes-namespace: emojivoto
-spec:
-  type: website
-  lifecycle: production
-  owner: guest
+  name: emojivoto
 ---
-apiVersion: backstage.io/v1alpha1
-kind: Component
-metadata:
-  name: vote-bot
-  description: Vote bot to generate traffic
-  namespace: default
-  annotations:
-    backstage.io/kubernetes-label-selector: app=vote-bot
-    backstage.io/kubernetes-namespace: emojivoto
-spec:
-  type: service
-  lifecycle: production
-  owner: guest
----
-apiVersion: backstage.io/v1alpha1
-kind: Component
-metadata:
-  name: voting
-  description: the voting service
-  namespace: default
-  annotations:
-    backstage.io/kubernetes-label-selector: app=voting-svc
-    backstage.io/kubernetes-namespace: emojivoto
-spec:
-  type: service
-  lifecycle: production
-  owner: guest
----
-apiVersion: backstage.io/v1alpha1
-kind: Component
+apiVersion: v1
+kind: ServiceAccount
 metadata:
   name: emoji
-  description: The emoji service which returns an emoji
-  namespace: default
-  annotations:
-    backstage.io/kubernetes-label-selector: app=emoji-svc
-    backstage.io/kubernetes-namespace: emojivoto
+  namespace: emojivoto
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: voting
+  namespace: emojivoto
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: web
+  namespace: emojivoto
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: emoji-svc
+  namespace: emojivoto
 spec:
-  type: service
-  lifecycle: production
-  owner: guest
+  ports:
+  - name: grpc
+    port: 8080
+    targetPort: 8080
+  - name: prom
+    port: 8801
+    targetPort: 8801
+  selector:
+    app: emoji-svc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: voting-svc
+  namespace: emojivoto
+spec:
+  ports:
+  - name: grpc
+    port: 8080
+    targetPort: 8080
+  - name: prom
+    port: 8801
+    targetPort: 8801
+  selector:
+    app: voting-svc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: web-svc
+  namespace: emojivoto
+spec:
+  ports:
+  - name: http
+    port: 80
+    targetPort: 8080
+  selector:
+    app: web-svc
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app.kubernetes.io/name: emoji
+    app.kubernetes.io/part-of: emojivoto
+    app.kubernetes.io/version: v11
+    backstage.io/kubernetes-id: emoji
+  name: emoji
+  namespace: emojivoto
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: emoji-svc
+      version: v11
+  template:
+    metadata:
+      labels:
+        app: emoji-svc
+        version: v11
+        backstage.io/kubernetes-id: emoji
+    spec:
+      containers:
+      - env:
+        - name: GRPC_PORT
+          value: "8080"
+        - name: PROM_PORT
+          value: "8801"
+        image: docker.l5d.io/buoyantio/emojivoto-emoji-svc:v11
+        name: emoji-svc
+        ports:
+        - containerPort: 8080
+          name: grpc
+        - containerPort: 8801
+          name: prom
+        resources:
+          requests:
+            cpu: 100m
+      serviceAccountName: emoji
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app.kubernetes.io/name: vote-bot
+    app.kubernetes.io/part-of: emojivoto
+    app.kubernetes.io/version: v11
+    backstage.io/kubernetes-id: vote-bot
+  name: vote-bot
+  namespace: emojivoto
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: vote-bot
+      version: v11
+  template:
+    metadata:
+      labels:
+        app: vote-bot
+        version: v11
+        backstage.io/kubernetes-id: vote-bot
+    spec:
+      containers:
+      - command:
+        - emojivoto-vote-bot
+        env:
+        - name: WEB_HOST
+          value: web-svc.emojivoto:80
+        image: docker.l5d.io/buoyantio/emojivoto-web:v11
+        name: vote-bot
+        resources:
+          requests:
+            cpu: 10m
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app.kubernetes.io/name: voting
+    app.kubernetes.io/part-of: emojivoto
+    app.kubernetes.io/version: v11
+    backstage.io/kubernetes-id: voting
+  name: voting
+  namespace: emojivoto
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: voting-svc
+      version: v11
+  template:
+    metadata:
+      labels:
+        app: voting-svc
+        version: v11
+        backstage.io/kubernetes-id: voting
+    spec:
+      containers:
+      - env:
+        - name: GRPC_PORT
+          value: "8080"
+        - name: PROM_PORT
+          value: "8801"
+        image: docker.l5d.io/buoyantio/emojivoto-voting-svc:v11
+        name: voting-svc
+        ports:
+        - containerPort: 8080
+          name: grpc
+        - containerPort: 8801
+          name: prom
+        resources:
+          requests:
+            cpu: 100m
+      serviceAccountName: voting
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app.kubernetes.io/name: web
+    app.kubernetes.io/part-of: emojivoto
+    app.kubernetes.io/version: v11
+    backstage.io/kubernetes-id: web
+  name: web
+  namespace: emojivoto
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: web-svc
+      version: v11
+  template:
+    metadata:
+      labels:
+        app: web-svc
+        version: v11
+        backstage.io/kubernetes-id: web
+    spec:
+      containers:
+      - env:
+        - name: WEB_PORT
+          value: "8080"
+        - name: EMOJISVC_HOST
+          value: emoji-svc.emojivoto:8080
+        - name: VOTINGSVC_HOST
+          value: voting-svc.emojivoto:8080
+        - name: INDEX_BUNDLE
+          value: dist/index_bundle.js
+        image: docker.l5d.io/buoyantio/emojivoto-web:v11
+        name: web-svc
+        ports:
+        - containerPort: 8080
+          name: http
+        resources:
+          requests:
+            cpu: 100m
+      serviceAccountName: web
