--- a/plugins/linkerd-backend/package.json
+++ b/plugins/linkerd-backend/package.json
@@ -30,7 +30,9 @@
     "@types/express": "*",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
+    "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
+    "qs": "^6.12.0",
     "winston": "^3.2.1",
     "yn": "^4.0.0"
   },
@@ -38,6 +40,7 @@
     "@backstage/cli": "^0.26.2",
     "@backstage/plugin-auth-backend": "^0.22.3",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.1.2",
+    "@types/qs": "^6",
     "@types/supertest": "^2.0.12",
     "msw": "^1.0.0",
     "supertest": "^6.2.4"
