--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -40,6 +40,7 @@
     "@backstage/plugin-techdocs-react": "^1.2.2",
     "@backstage/plugin-user-settings": "^0.8.4",
     "@backstage/theme": "^0.5.2",
+    "@internal/linkerd": "^0.1.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "history": "^5.0.0",
