--- a/plugins/linkerd-backend/sample/catalog.yaml
+++ b/plugins/linkerd-backend/sample/catalog.yaml
@@ -5,7 +5,7 @@ kind: Component
 metadata:
   name: web
   description: The web frontend from the emoji service
-  namespace: default
+  namespace: emojivoto
   annotations:
     backstage.io/kubernetes-id: web
     backstage.io/kubernetes-namespace: emojivoto
@@ -19,7 +19,7 @@ kind: Component
 metadata:
   name: vote-bot
   description: Vote bot to generate traffic
-  namespace: default
+  namespace: emojivoto
   annotations:
     backstage.io/kubernetes-id: vote-bot
     backstage.io/kubernetes-namespace: emojivoto
@@ -33,7 +33,7 @@ kind: Component
 metadata:
   name: voting
   description: the voting service
-  namespace: default
+  namespace: emojivoto
   annotations:
     backstage.io/kubernetes-id: voting
     backstage.io/kubernetes-namespace: emojivoto
@@ -47,7 +47,7 @@ kind: Component
 metadata:
   name: emoji
   description: The emoji service which returns an emoji
-  namespace: default
+  namespace: emojivoto
   annotations:
     backstage.io/kubernetes-id: emoji
     backstage.io/kubernetes-namespace: emojivoto
